--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  uuid: ^3.0.6
+  flutter_bloc: ^8.0.1
+  copy_with_extension: ^4.0.0
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  injectable_generator:
+  build_runner:
+  hive_generator:
+  copy_with_extension_gen: 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
