--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   copy_with_extension: ^4.0.0
   flutter_slidable: ^1.2.0
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
