Implement global account preferences

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   copy_with_extension: ^4.0.0
   flutter_slidable: ^1.2.0
   flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
