--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   shared_preferences: ^2.0.13
   flutter_svg: ^1.0.3
+  top_snackbar_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
