--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
   build_runner:
   hive_generator:
   copy_with_extension_gen: 
+  flutter_launcher_icons: "^0.9.2"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -79,3 +80,7 @@ flutter:
     - assets/svg/login.svg
     - assets/svg/register.svg
     
+flutter_icons:
+    image_path: "assets/app_icon/icon.png"
+    android: true
+    ios: true
