--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,6 @@ on:
     branches:
       - 'main'
   pull_request:
-    types: [opened, edited, reopened]
     branches:    
       - '**'
   
@@ -29,10 +28,7 @@ jobs:
     
     # Get flutter dependencies.
     - run: flutter pub get
-    
-    # Check for any formatting issues in the code.
-    - run: flutter format --set-exit-if-changed .
-    
+  
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
     
@@ -40,9 +36,9 @@ jobs:
     - run: flutter test
     
     # Build apk.
-    - run: flutter build apk
+    - run: flutter build apk --debug
     
     - uses: actions/upload-artifact@v1
       with:
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
+        name: debug-apk
+        path: build/app/outputs/apk/debug/app-debug.apk
