--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +49,8 @@ dependencies:
   top_snackbar_flutter: ^1.0.2
   equatable: ^2.0.3
   local_auth: ^2.0.1
+  intl: ^0.17.0
+  intl_utils: ^2.1.0 
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +72,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  generate: true 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
