--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_password_saver">
+    package="vn.thailam.flutter_password_saver">
    <application
         android:label="Password Saver"
         android:name="${applicationName}"
