--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "vn.thailam." "\0"
             VALUE "FileDescription", "flutter_password_saver" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "flutter_password_saver" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 vn.thailam. All rights reserved." "\0"
             VALUE "OriginalFilename", "flutter_password_saver.exe" "\0"
             VALUE "ProductName", "flutter_password_saver" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
