--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,9 +51,12 @@ dependencies:
   local_auth: ^2.0.1
   intl: ^0.17.0
   intl_utils: ^2.1.0 
+  flutter_app_shortcut: ^1.0.0
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
+  
     sdk: flutter
   injectable_generator:
   build_runner:
