--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,6 @@ dependencies:
   intl_utils: ^2.1.0 
   flutter_app_shortcut: ^1.0.0
   uni_links: ^0.5.1
-  super_tooltip: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -85,8 +84,6 @@ flutter:
   assets:
     - assets/svg/login.svg
     - assets/svg/register.svg
+    - assets/image/onboard_create.png
+    - assets/image/
     
-flutter_icons:
-    image_path: "assets/app_icon/icon.png"
-    android: true
-    ios: true
