--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.0+4
+version: 2.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -38,12 +38,12 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   get_it: ^7.2.0
-  injectable: ^1.5.3
+  injectable: ^2.1.0
   uuid: ^3.0.6
   flutter_bloc: ^8.0.1
   copy_with_extension: ^4.0.0
   flutter_slidable: ^2.0.0
-  flutter_secure_storage: ^5.0.2
+  flutter_secure_storage: ^8.0.0
   shared_preferences: ^2.0.13
   flutter_svg: ^1.0.3
   top_snackbar_flutter: ^1.0.2
@@ -54,6 +54,7 @@ dependencies:
   flutter_app_shortcut: ^1.0.0
   uni_links: ^0.5.1
   custom_sliding_segmented_control: ^1.7.4
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
@@ -63,13 +64,13 @@ dev_dependencies:
   build_runner:
   hive_generator:
   copy_with_extension_gen: 
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: ^0.11.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   test: 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
