--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.10.3'
+          flutter-version: '3.0.3'
 
       - name: Flutter version
         run: flutter --version
@@ -67,9 +67,9 @@ jobs:
         run: flutter build appbundle
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.6'
+          ruby-version: '3.0'
 
       - name: Cache bundle dependencies
         uses: actions/cache@v2
