--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,11 +19,13 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '12.x'
+          cache: 'java12'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
           flutter-version: '3.0.3'
+          cache: 'flutter303'
 
       - name: Flutter version
         run: flutter --version
