--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,16 +17,18 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '12.x'
-          cache: 'java12'
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          cache: 'gradle'
+          check-latest: true
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.3'
-          cache: 'flutter303'
+          cache: true
 
       # Get flutter dependencies.
       - name: Download pub dependencies
@@ -37,14 +39,14 @@ jobs:
         run: flutter analyze .
 
       # Run widget tests for our flutter project.
-      - name: Run tests
-        run: flutter test
+      # - name: Run tests
+      #   run: flutter test
 
       # Build apk.
       - name: Build debug apk
-        run: flutter build apk --debug
+        run: flutter build apk --debug --target-platform=android-arm64
       
-      - uses: actions/upload-artifact@v1
-        with:
-          name: debug-apk
-          path: build/app/outputs/apk/debug/app-debug.apk
+      # - uses: actions/upload-artifact@v1
+      #   with:
+      #     name: debug-apk
+      #     path: build/app/outputs/apk/debug/app-debug.apk
