--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,26 +16,18 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '12.x'
-          cache: 'java12'
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          cache: 'gradle'
+          check-latest: true
 
       - name: Setup Flutter
-        uses: subosito/flutter-action@v1
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.0.3'
-          cache: 'flutter303'
-
-      - name: Flutter version
-        run: flutter --version
-
-      - name: Cache pub dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.FLUTTER_HOME }}/.pub-cache
-          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
-          restore-keys: ${{ runner.os }}-pub-
+          cache: true
 
       - name: Download pub dependencies
         run: flutter pub get
