Update targetSdk + minSdk + update flutter version

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Prevent crashes on Android 6 according to https://docs.flutter.dev/deployment/android
 # android.bundle.enableUncompressedNativeLibs=false 
+
+org.gradle.jvmargs=-Xmx1536M --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
